core-plugins/src/test/resources/scraper/plugins/core/typechecker/ok/flatten3.yf
---
name: contains
graphs:
  start:
    - {type: Echo, put: list, value: []}
    - {type: Echo, put: list2, value: []}
    - type: FlattenList
      flatten: ["{list}", "{list2}", "{list2}", [1,2]]
      output: "mergedlists"


