core-plugins/src/test/resources/scraper/plugins/core/typechecker/fail/map.yf
---
name: map
graphs:
  start:
    - type: EchoNode
      put: key
      value: "1"

    - type: MapNode
      mapTarget: X
      list: [A,B]
      putElement: element

    - type: EchoNode
      log: "{element}" # not ok!

  X:
    - type: EchoNode
      put: key
      value: "{element}" # ok!


